modificato file contatti e registrazione

--- a/registrazione.html
+++ b/registrazione.html
@@ -16,51 +16,67 @@
             </div>
         </div>
     </nav>
-    <main>
-    <div>
-        <h1>Gamers shop</h1>
-        <h2>Registrati alla nostra newsletter</h2>
-    </div>
-    <div>
-        <div>
-        <h2>Form di Registrazione</h2>
-            <form action="post">
-                <label for=""></label>
-                <label for="name">Nome: </label><br>
-                <input type="text" id="name"><br>
-                <label for="email">Email: </label><br>
-                <input type="email" id="email"><br>
-                <label for="date_birth">Data di nascita: </label><br>
-                <input type="date" id="date_birth"><br>
-                <fieldset>
-                    <legend>Interessi:</legend>
-                    <label for="sport">
-                        <input type="checkbox" name="sport" id="sport">Sport
-                    </label><br>
-                    <label for="musica">
-                        <input type="checkbox" name="musica" id="musica">Musica
-                    </label><br>
-                    <label for="cucina">
-                        <input type="checkbox" name="cucina" id="cucina">Cucina
-                    </label><br>
-                    <label for="viaggi">
-                        <input type="checkbox" name="viaggi" id="viaggi">Viaggi
-                    </label><br>
-                    <label for="tecnologia">
-                        <input type="checkbox" name="tecnologia" id="tecnologia">Tecnologia
-                    </label><br>
-                </fieldset>
-                <input type="checkbox" name="newsletter" id="newsletter">
-                <label for="newsletter">Vuoi ricevere la nostra newsletter</label><br>
-                <input type="submit" value="Registrati"><br>
-            </form>
+    <header class="section-bg">
+        <div class="container overflow-hidden">
+            <h1>Gamers shop</h1>
+            <div class="row">
+                <h2>Registrati alla nostra newsletter</h2>
+            </div>
         </div>
-    </div>
+    </header>
+    <main>
+    <section>
+        <div class="container form">
+            <h2>Form di Registrazione</h2>
+            <div class="row">
+                <form action="post">
+                    <label for=""></label>
+                    <label for="name">Nome: </label><br>
+                    <input type="text" id="name"><br>
+                    <label for="email">Email: </label><br>
+                    <input type="email" id="email"><br>
+                    <label for="date_birth">Data di nascita: </label><br>
+                    <input type="date" id="date_birth"><br>
+                    <fieldset>
+                        <legend>Interessi:</legend>
+                        <label for="sport">
+                            <input type="checkbox" name="sport" id="sport">Sport
+                        </label><br>
+                        <label for="musica">
+                            <input type="checkbox" name="musica" id="musica">Musica
+                        </label><br>
+                        <label for="cucina">
+                            <input type="checkbox" name="cucina" id="cucina">Cucina
+                        </label><br>
+                        <label for="viaggi">
+                            <input type="checkbox" name="viaggi" id="viaggi">Viaggi
+                        </label><br>
+                        <label for="tecnologia">
+                            <input type="checkbox" name="tecnologia" id="tecnologia">Tecnologia
+                        </label><br>
+                    </fieldset>
+                    <input type="checkbox" name="newsletter" id="newsletter">
+                    <label for="newsletter">Vuoi ricevere la nostra newsletter</label><br>
+                    <input type="submit" value="Registrati"><br>
+                </form>
+            </div>
+        </div>
+    </section>
     </main>
-    <footer>
-        <p>Autore del sito: Doua Boufqir</p>
-        <p>Email: <a class="email" href="mailto:doua.boufqir@immaginazioneelavoro.it">doua.boufqir@immaginazioneelavoro.it</a></p>
-        <p>Ultimo aggiornamento: 07 maggio 2025</p>
+    <footer class="footer-container">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <p>Autore del sito: Doua Boufqir</p>
+                </div>
+                <div class="col-4">
+                    <p>Email: <a class="link-footer" href="mailto:doua.boufqir@immaginazioneelavoro.it">doua.boufqir@immaginazioneelavoro.it</a></p>
+                </div>
+                <div class="col-4">
+                    <p>Ultimo aggiornamento: 07 maggio 2025</p>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
