--- a/contatti.html
+++ b/contatti.html
@@ -16,32 +16,52 @@
             </div>
         </div>
     </nav>
-    <main>
-        <div>
+    <header class="section-bg">
+        <div class="container overflow-hidden">
             <h1>Gamers shop</h1>
-            <div>
+            <div class="row">
                 <h2>Qui trovi i nostri contatti e le informazioni per raggiungerci</h2>
             </div>
         </div>
-        <div>
-            <h3>Informazioni di Contatto</h3>
-            <div class="col">
-                <p>Email: <a href="mailto:doua.boufqir@immaginazioneelavoro.it">doua.boufqir@immaginazioneelavoro.it</a></p>
-                <p>Telefono: <a href="tel:3284120115">+39 3284120115</a></p>
-                <p>Indirizzo: Via Carlo Alberto, 22/a, 10123 Torino</p>
+    </header>
+    <main>
+        <section>
+            <div class="container">
+                <h3>Informazioni di Contatto</h3>
+                <div class="row">
+                    <p>Email: <a href="mailto:doua.boufqir@immaginazioneelavoro.it">doua.boufqir@immaginazioneelavoro.it</a></p>
+                </div>
+                <div class="row">
+                    <p>Telefono: <a href="tel:3284120115">+39 3284120115</a></p>
+                </div>
+                <div class="row">
+                    <p>Indirizzo: Via Carlo Alberto, 22/a, 10123 Torino</p>
+                </div>
             </div>
-        </div>
-        <div class="container4">
-            <h3>Dove siamo</h3>
-            <div class="row">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2817.988396671625!2d7.68158607542789!3d45.06574645993715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d6f1652d8d1%3A0x4afd6d42b5613927!2sVia%20Carlo%20Alberto%2C%2022%2FA%2C%2010123%20Torino%20TO!5e0!3m2!1sit!2sit!4v1746645332015!5m2!1sit!2sit" width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+        <section class="section-bg">
+            <div class="container">
+                <h3>Dove siamo</h3>
+                <div class="row">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2817.988396671625!2d7.68158607542789!3d45.06574645993715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d6f1652d8d1%3A0x4afd6d42b5613927!2sVia%20Carlo%20Alberto%2C%2022%2FA%2C%2010123%20Torino%20TO!5e0!3m2!1sit!2sit!4v1746645332015!5m2!1sit!2sit" width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
-        </div>
+        </section>
     </main>
-    <footer>
-        <p>Autore del sito: Doua Boufqir</p>
-        <p>Email: <a class="email" href="mailto:doua.boufqir@immaginazioneelavoro.it">doua.boufqir@immaginazioneelavoro.it</a></p>
-        <p>Ultimo aggiornamento: 07 maggio 2025</p>
+    <footer class="footer-container">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <p>Autore del sito: Doua Boufqir</p>
+                </div>
+                <div class="col-4">
+                    <p>Email: <a class="link-footer" href="mailto:doua.boufqir@immaginazioneelavoro.it">doua.boufqir@immaginazioneelavoro.it</a></p>
+                </div>
+                <div class="col-4">
+                    <p>Ultimo aggiornamento: 07 maggio 2025</p>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
