--- a/registrazione.html
+++ b/registrazione.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,62 +8,73 @@
     <title>Gamers shop: Registrazione</title>
 </head>
 <body>
-    <nav class="bg-nav">
-        <div class="container">
-            <div class="navbar">
-                <a class="nav-item" href="./index.html">Home </a>
-                <a class="nav-item" href="./contatti.html"> Contatti </a>
-                <a class="nav-item active" href="#"> Registrazione </a>
+    <div class="container-main">
+        <nav class="bg-nav">
+            <div class="container">
+                <div class="navbar">
+                    <a class="nav-item" href="./index.html">Home </a>
+                    <a class="nav-item" href="./contatti.html"> Contatti </a>
+                    <a class="nav-item active" href="#"> Registrazione </a>
+                </div>
             </div>
-        </div>
-    </nav>
-    <header class="section-bg">
-        <div class="container overflow-hidden">
-            <h1>Gamers shop</h1>
-            <div class="row">
-                <h2>Registrati alla nostra newsletter</h2>
+        </nav>
+        <header class="section-bg">
+            <div class="container">
+                <h1>Gamers shop</h1>
+                <div class="row">
+                    <h2>Registrati alla nostra newsletter</h2>
+                </div>
             </div>
-        </div>
-    </header>
-    <main>
-    <section>
-        <div class="container form">
-            <h2>Form di Registrazione</h2>
-            <div class="row">
-                <form action="post">
-                    <label for=""></label>
-                    <label for="name">Nome: </label><br>
-                    <input type="text" id="name"><br>
-                    <label for="email">Email: </label><br>
-                    <input type="email" id="email"><br>
-                    <label for="date_birth">Data di nascita: </label><br>
-                    <input type="date" id="date_birth"><br>
-                    <fieldset>
-                        <legend>Interessi:</legend>
-                        <label for="sport">
-                            <input type="checkbox" name="sport" id="sport">Sport
-                        </label><br>
-                        <label for="musica">
-                            <input type="checkbox" name="musica" id="musica">Musica
-                        </label><br>
-                        <label for="cucina">
-                            <input type="checkbox" name="cucina" id="cucina">Cucina
-                        </label><br>
-                        <label for="viaggi">
-                            <input type="checkbox" name="viaggi" id="viaggi">Viaggi
-                        </label><br>
-                        <label for="tecnologia">
-                            <input type="checkbox" name="tecnologia" id="tecnologia">Tecnologia
-                        </label><br>
-                    </fieldset>
-                    <input type="checkbox" name="newsletter" id="newsletter">
-                    <label for="newsletter">Vuoi ricevere la nostra newsletter</label><br>
-                    <input type="submit" value="Registrati"><br>
-                </form>
+        </header>
+        <main>
+        <section>
+            <div class="section-bg">
+                <div class="container">
+                    <h2>Form di Registrazione</h2>
+                    <div class="row">
+                        <form action="post">
+                            <div class="form-group">
+                                <label class="label" for="name">Nome: </label>
+                                <input type="text" id="name">
+                            </div>
+                            <div class="form-group">
+                                <label class="label" for="email">Email: </label>
+                                <input type="email" id="email">
+                            </div>
+                            <div class="form-group">
+                                <label class="label" for="date_birth">Data di nascita: </label>
+                                <input type="date" id="date_birth">
+                            </div>
+                            <div class="form-group">
+                                <fieldset>
+                                    <legend>Interessi:</legend>
+                                    <label for="sport">
+                                        <input type="checkbox" name="sport" id="sport">Sport
+                                    </label><br>
+                                    <label for="musica">
+                                        <input type="checkbox" name="musica" id="musica">Musica
+                                    </label><br>
+                                    <label for="cucina">
+                                        <input type="checkbox" name="cucina" id="cucina">Cucina
+                                    </label><br>
+                                    <label for="viaggi">
+                                        <input type="checkbox" name="viaggi" id="viaggi">Viaggi
+                                    </label><br>
+                                    <label for="tecnologia">
+                                        <input type="checkbox" name="tecnologia" id="tecnologia">Tecnologia
+                                    </label><br>
+                                </fieldset>
+                            </div>
+                            <input type="checkbox" name="newsletter" id="newsletter">
+                            <label for="newsletter">Vuoi ricevere la nostra newsletter</label><br>
+                            <input type="submit" value="Registrati"><br>
+                        </form>
+                    </div>
+                </div>
             </div>
-        </div>
-    </section>
-    </main>
+        </section>
+        </main>
+    </div>
     <footer class="footer-container">
         <div class="container">
             <div class="row">
