--- a/contatti.html
+++ b/contatti.html
@@ -7,47 +7,55 @@
     <title>Gamers shop: Contatti</title>
 </head>
 <body>
-    <nav class="bg-nav">
-        <div class="container">
-            <div class="navbar">
-                <a class="nav-item" href="./index.html">Home </a>
-                <a class="nav-item active" href="#"> Contatti </a>
-                <a class="nav-item" href="./registrazione.html"> Registrazione </a>
-            </div>
-        </div>
-    </nav>
-    <header class="section-bg">
-        <div class="container overflow-hidden">
-            <h1>Gamers shop</h1>
-            <div class="row">
-                <h2>Qui trovi i nostri contatti e le informazioni per raggiungerci</h2>
-            </div>
-        </div>
-    </header>
-    <main>
-        <section>
+    <div class="container-main">
+        <nav class="bg-nav">
             <div class="container">
-                <h3>Informazioni di Contatto</h3>
-                <div class="row">
-                    <p>Email: <a href="mailto:doua.boufqir@immaginazioneelavoro.it">doua.boufqir@immaginazioneelavoro.it</a></p>
-                </div>
-                <div class="row">
-                    <p>Telefono: <a href="tel:3284120115">+39 3284120115</a></p>
-                </div>
-                <div class="row">
-                    <p>Indirizzo: Via Carlo Alberto, 22/a, 10123 Torino</p>
+                <div class="navbar">
+                    <a class="nav-item" href="./index.html">Home </a>
+                    <a class="nav-item active" href="#"> Contatti </a>
+                    <a class="nav-item" href="./registrazione.html"> Registrazione </a>
                 </div>
             </div>
-        </section>
-        <section class="section-bg">
+        </nav>
+        <header class="section-bg">
             <div class="container">
-                <h3>Dove siamo</h3>
+                <h1>Gamers shop</h1>
                 <div class="row">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2817.988396671625!2d7.68158607542789!3d45.06574645993715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d6f1652d8d1%3A0x4afd6d42b5613927!2sVia%20Carlo%20Alberto%2C%2022%2FA%2C%2010123%20Torino%20TO!5e0!3m2!1sit!2sit!4v1746645332015!5m2!1sit!2sit" width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <h2>Qui trovi i nostri contatti e le informazioni per raggiungerci</h2>
                 </div>
             </div>
-        </section>
-    </main>
+        </header>
+        <main>
+            <section>
+                <div class="container">
+                    <h3>Informazioni di Contatto</h3>
+                    <div class="row">
+                        <p>Email: <a href="mailto:doua.boufqir@immaginazioneelavoro.it">doua.boufqir@immaginazioneelavoro.it</a></p>
+                    </div>
+                    <div class="row">
+                        <p>Telefono: <a href="tel:3284120115">+39 3284120115</a></p>
+                    </div>
+                    <div class="row">
+                        <p>Indirizzo: Via Carlo Alberto, 22/a, 10123 Torino</p>
+                    </div>
+                </div>
+            </section>
+            <section class="section-bg">
+                <div class="container">
+                    <h3>Dove siamo</h3>
+                    <div class="row">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2817.
+                        988396671625!2d7.68158607542789!3d45.06574645993715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+                        1!3m3!1m2!1s0x47886d6f1652d8d1%3A0x4afd6d42b5613927!2sVia%20Carlo%20Alberto%2C%2022%2FA%2C%
+                        2010123%20Torino%20TO!5e0!3m2!1sit!2sit!4v1746645332015!5m2!1sit!2sit"
+                        width="900" height="450" allowfullscreen="" loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <!-- loading:"lazy" visualizza l'iframe sono quando verrà il momento ossia quando lo raggiungiamo -->
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
     <footer class="footer-container">
         <div class="container">
             <div class="row">
